# umbrella-onboarding

./: .env.example  .gitignore  README.md  app.py  assistant.py  gui.py  hello.py  models.py  pyproject.toml
data/: employees.py
